# vibe-eyes

./: .gitignore  DATA_CURATION.md  DEVELOPER_GUIDE.md  EDGE_SETUP.md  EMOTION_ENGINE.md  README.md  pyproject.toml  requirements.txt
scripts/: test_amplifier.py  test_extraction.py  test_serial.py  test_vibes.sh
vibe_eyes/: amplifier.py  blender.py  extractor.py  ollama_anchor.py  output.py  server.py
