[project]
name = "vibe-eyes"
version = "0.1.0"
description = "Real-time emotional intelligence for conversational AI"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sentence-transformers>=5.2.0",
    "huggingface-hub>=1.4.0",
    "transformers>=5.1.0",
    "textstat>=0.7.3",
    "nltk>=3.8.1",
    "pyserial>=3.5",
    "numpy>=2.2.0",
    "pydantic>=2.5.0",
    "ollama>=0.1.7",
    "httpx>=0.25.0",
    "setuptools>=65.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vibe_eyes"]
